--- a/16/demo.css
+++ b/16/demo.css
@@ -1,7 +1,9 @@
-html, body { 
-  background-color:#000;
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  overflow: hidden !important;  
+html,body {
+	background-color: #000;
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	overflow: hidden !important;
+	color: white;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
